--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,6 @@
----
-# Only the essential Sass file needs front matter, the dashes are enough
----
+// ---
+// # Only the essential Sass file needs front matter, the dashes are enough
+// ---
 
 /**
 * Forma Jekyll Theme 1.2.2
