--- a/_includes/head-seo.html
+++ b/_includes/head-seo.html
@@ -1,4 +1,1 @@
-<meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="BE YOUR GOD" />
-<meta name="twitter:description" content="" />
-<meta name="twitter:image" content="assets/images/posts/1.jpg" />
+{% seo %}
