--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,9 +4,9 @@ $font-secondary: "Lucida Sans Typewriter", "Liberation Mono", "Nimbus Mono L", M
 
 
 // Colors
-$color-accent: #d997ff;
+$color-accent: #0ff;
 $black: #111;
 $gray-dark: #333;
 $gray: #999;
 $gray-light: #f1f1f1;
-$yellow: #ffd08e;
+$yellow: #ffff00;
