--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,13 +3,13 @@
 		<button id="hide-sidebar" class="toggle-sidebar"><span class="screen-reader-text">Close</span><span aria-hidden="true"
 			 class="icon-plus"></span></button>
 			<nav id="sidebar-navigation" class="widget site-navigation">
-				<h2 class="widget-title">Know the tint is dark</h2>
+				<h2 class="widget-title">Explore Site</h2>
 				<ul class="menu">
 					{% for link in site.navigation %}
 						<li class="menu-item"><a href="{{ link.url }}">{{ link.text }}</a></li>
 					{% endfor %}
 				</ul>
 			</nav>
-			<!-- {% include widgets.html %} -->
+			{% include widgets.html %}
 	</div><!-- .sidebar-inside -->
 </aside><!-- .sidebar -->
