--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,4 +14,6 @@
             <span aria-hidden="true" class="icon-plus"></span>
         </button>
     </div><!-- .inner -->
+    <!-- Highlight.js CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/atom-one-dark.min.css">
 </header><!-- .site-header -->
