--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,9 @@
     <script src="{{ site.baseurl }}/assets/js/jquery-3.4.1.min.js"></script>
     <script src="{{ site.baseurl }}/assets/js/plugins.js"></script>
     <script src="{{ site.baseurl }}/assets/js/custom.js"></script>
-
+    <!-- Highlight.js JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>
 </body>
 
 </html>
