--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -12,8 +12,12 @@ class: 'tag-template'
                 {{ paginator.total_posts }} {% if paginator.total_posts == 1 %}post{% else %}posts{% endif %} tagged <span class="highlight">{{ page.tag }}</span>
             </h1>
         </header>
-        <div id="post-wrapper" class="post-wrapper">
-            {% for post in paginator.posts %}{% include postbox.html %}{% endfor %}
-        </div><!-- .post-wrapper -->
+        <div id="content-wrapper" class="content-wrapper">
+            {% for post in site.tags[page.tag] %}
+            <article class="post-item">
+                <h2 class="post-title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
+            </article>
+            {% endfor %}
+        </div><!-- .content-wrapper -->
     </main><!-- .site-main -->
 </div><!-- .site-content -->
