--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,5 +16,5 @@
     </div><!-- .inner -->
     <!-- Highlight.js CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/atom-one-dark.min.css">
-    <link rel="shortcut icon" href="{{ site.baseurl }}/{{ site.favicon }}" type="image/png" />ㄴ
+    <link rel="shortcut icon" href="{{ site.baseurl }}/{{ site.favicon }}" type="image/png" />
 </header><!-- .site-header -->
